kuber-homeworks/3.3/configs/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: back-mutool
          imagePullPolicy: IfNotPresent
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
