kuber-homeworks/3.3/configs/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: front-mutool
          imagePullPolicy: IfNotPresent
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
